Io 52 (#15)
* Server refactoring
* Added ResponseFactory
* Created Services to handle Socket communication && data exchange
* Split Server into designated controllers

* organize imports

* Fix communication

* Remove unnecessary methods from shared Data

---------

Co-authored-by: dominiks01 <dominikszot950@gmail>